[build-system]
requires = ["setuptools >= 61.0"]

[tool.ruff]
line-length = 88
fix = true

[project]
name = "freq_matcher"
version = "0.1.0"
requires-python = ">= 3.1"
dependencies = [
    "datasets",
    "jupyterlab",
    "more-itertools",
    "nltk",
    "numpy",
    "pydantic",
    "torch"
    "pyyaml",
    "pip",
    "pytest",
    "jupyter",
    "tqdm",
    "transformers",
    "spacy",
    "scipy",
    "scikit-learn",
    "pandas",
    "matplotlib",
]
authors = [
    {name = "Brooke Bergin", email = "beb74@georgetown.edu"},
    {name = "Mikayla Campbell", email = "mrc195@georgetown.edu"}
]
description = "An early look into potential effects of Executive Order 14151 on NSF grants and publications."
keywords = ["NSF", "National Science Foundation", "DEI", "Executive Order 14151", "funding", "federal", "research"]
